# v0.27.0
- added ProcessAllMd() for rendering plain markdown files.


# v0.26.0 for Annabelle
Pushed to CRAN on 6 July 2017

# v0.25.7
- ProcessAllRmd() function added: this processes all Rmd files in the specified folder using either rmarkdown::render() or knitr::knit2html()
- MakeBatch() changed to force Rmd file specific batch file to use rmarkdown::render() instead of knitr::knit2html()
- MakeBatch(file=NULL) now creates ProcessAllRmd.bat file in working directory so that users can process all Rmd files from Windows Explorer or the  DOS command prompt.
- VS offered BrowseSVG() and replacement cacc.js for improved interactive experience; JG fixed for CRAN checks.
- changes from VS merged via GitHub (not to be reported again)
- moved knitr package to imports. This means some of the Rmd files need more explicit mention of the package to get chunk options working properly.
- JG implemented the ViewSVG() so that anyone can use the interactive graph viewing system; required various internal functions to move and write necessary files 
- added FittedLinePlot() which adds a fitted line to the ScatterPlot() implmented through ScatterPlot(); these use a few internal functions, found in ScatterPlot.R
- added plot and print methods for various graph types. The print method refers to the plot function so acts just like the ggplot and lattice packages.
- restructured the storage of graph parameters and arguments for a variety of the masked functions. The intention is to make cleaning things up easier.
- adding examples to the graph making help pages to show that the BrailleR functions replicate base graphics functions
- added xlab(), ylab(), and main() for getting or setting these three parameters quickly. They only work for graphs that are created using BrailleR functions at this time.
- updated VI.gg() which add functions to create text elements so that accessible versions can be made; various internal functions added to get labels commonly found on ggplot() graphs.