@@ -2,7 +2,7 @@ Package: BrailleR
 Type: Package
 Title: Improved Access for Blind Users
 Version: 0.27.0
-Date: 2017-06-29
+Date: 2017-08-29
 Author: A. Jonathan R. Godfrey [aut, cre], Debra Warren [ctb], Donal Fitzpatrick [ctb], Duncan Murdoch [ctb], Greg Snow
     [ctb], Henrik Bengtsson [ctb], James Curtis [ctb], JooYoung Seo [ctb], Paul Murrell [ctb], Timothy Bilton [aut], Tony Hirst [ctb], Tsan-Kuang Lee [ctb], Volker Sorge [aut], Yihui Xie
     [ctb]
@@ -45,7 +45,6 @@ Imports:
     magrittr,
     moments,
     nortest,
-    pander,
     rmarkdown,
     utils,
     XML,
@@ -57,3 +56,4 @@ VignetteBuilder: knitr
 URL: https://github.com/ajrgodfrey/BrailleR
 BugReports: https://github.com/ajrgodfrey/BrailleR/issues
 RoxygenNote: 5.0.1
+
