@@ -11,9 +11,9 @@ import(knitr)
 import(magrittr)
 importFrom("moments", "skewness")
 importFrom("nortest", "ad.test")
-importFrom("pander", "pander")
 import(rmarkdown)
 importFrom("stats", "aggregate", "anova", "as.ts", "coef", "cor", "lm", "median", "na.omit", "qnorm", "rstudent", "sd") 
+importFrom("tools", "Rd2ex")
 importFrom("utils", "browseURL", "create.post", "download.file", "file.edit", "installed.packages", "menu", "packageVersion", "read.csv", "read.table", "savehistory", "tail", "unzip", "write.csv") 
 import(XML)
 importFrom("xtable", "xtable")
