@@ -1,0 +1,12 @@
+ResponseName.count = length(ResponseName)
+ResponseName.unique = length(unique(ResponseName))
+ResponseName.Nobs = sum(!is.na(ResponseName))
+ResponseName.Nmiss = sum(is.na(ResponseName))
+ResponseName.mean = mean(ResponseName, na.rm = TRUE)
+ResponseName.tmean5 = mean(ResponseName, trim =0.025, na.rm = TRUE)
+ResponseName.tmean10 = mean(ResponseName, trim =0.05, na.rm = TRUE)
+ResponseName.IQR = IQR(ResponseName, na.rm = TRUE)
+ResponseName.sd = sd(ResponseName, na.rm = TRUE)
+ResponseName.var = var(ResponseName, na.rm = TRUE)
+ResponseName.skew = moments::skewness(ResponseName, na.rm = TRUE)
+ResponseName.kurt = moments::kurtosis(ResponseName, na.rm = TRUE)
