@@ -1,0 +1,4 @@
+RDirectory: C:\Program Files\R\R-devel\bin\x64\Rscript.exe
+filename: BrailleRHistory.rmd
+lastdir: C:\Users\ajgodfre\Documents\Research\BrailleR\PackageFiles\vignettes
+newText: Use WriteR to edit your R markdown files, perhaps by starting from a template file
