@@ -1,5 +1,10 @@
 # v0.27.0
 - added ProcessAllMd() for rendering plain markdown files.
+- removed dependency on pander package by altering UniDesc(). Reason: Nice results, but possibly over the top for introductory students.
+- added Language to the set of package options to be chosen by the user. This is necessary to then have the SpellCheckFiles() work properly.
+- added GetExampleText() to help extract the example text from help pages.
+
+
 
 
 # v0.26.0 for Annabelle
